CREATE-3271: adapted other notebooks (Bayes)

--- a/demos/bayes_multi_simulation.ipynb
+++ b/demos/bayes_multi_simulation.ipynb
@@ -24,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 152.855959\n",
+      "         Iterations: 458\n",
+      "         Function evaluations: 654\n"
+     ]
+    }
+   ],
    "source": [
     "import pymc3 as pm\n",
     "import numpy.ma as ma\n",
@@ -48,8 +59,9 @@
     "\n",
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
-    "from pylife.materialdata.woehler.analyzer import *\n",
-    "from pylife.materialdata.woehler.bayes_analyzer import *\n",
+    "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
+    "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
+    "from pylife.materialdata.woehler.utils.bayes_analyzer import *\n",
     "from pylife.materialdata.woehler.loglike import *\n",
     "\n",
     "#data = pd.read_excel(\"C:/Users/\")\n",
@@ -62,10 +74,11 @@
     "\n",
     "\n",
     "# Class WoehlerCurve\n",
-    "WC_data = WoehlerCurve(data, ld_cyc_lim, {}, {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''})\n",
-    "WC_data.calc_woehler_curve_parameters()\n",
-    "x = np.log10(WC_data.fractures.loads)\n",
-    "y = np.log10(WC_data.fractures.cycles)\n",
+    "fatigue_data = FatigueData(data, ld_cyc_lim)\n",
+    "woehler_curve_creator = WoehlerCurveCreator(fatigue_data)\n",
+    "woehler_curve = woehler_curve_creator.maximum_like_procedure({})\n",
+    "x = np.log10(fatigue_data.fractures.loads)\n",
+    "y = np.log10(fatigue_data.fractures.cycles)\n",
     "bayes_analyzer = BayesAnalyzer()\n",
     "\n",
     "slope_full, intercept_full, r_value, p_value, std_err = stats.linregress(x, y)\n"
@@ -73,21 +86,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29, 452)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_runs = 1\n",
     "n_N=[0,0,0,0,0,0,0,5,0,5,0,5,0,5]\n",
     "n_N_inf=[3,0,3,0,3,0,0]\n",
-    "np.sum(n_N)+ np.sum(n_N_inf), WC_data.data.loads.shape[0]"
+    "np.sum(n_N)+ np.sum(n_N_inf), fatigue_data.data.loads.shape[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 10.673752\n",
+      "         Iterations: 662\n",
+      "         Function evaluations: 853\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (2 chains in 4 jobs)\n",
+      "NUTS: [sd, x, Intercept]\n",
+      "Sampling 2 chains, 0 divergences:  20%|█▉        | 2375/12000 [01:24<07:51, 20.40draws/s]"
+     ]
+    }
+   ],
    "source": [
     "step = 0\n",
     "for n in range(test_runs):\n",
@@ -96,8 +142,8 @@
     "    ndraws = 5000  # number of draws from the distribution\n",
     "    nburn = 1000   # number of \"burn-in points\" (which we'll discard)\n",
     "    \n",
-    "    data_small_fin = bayes_analyzer.ld_lvl_sample(WC_data, data, n_N)\n",
-    "    data_small_inf, data_inf_dict, n_frac = bayes_analyzer.ld_lvl_sample_inf(WC_data, n_N_inf)\n",
+    "    data_small_fin = bayes_analyzer.ld_lvl_sample(woehler_curve, data, n_N)\n",
+    "    data_small_inf, data_inf_dict, n_frac = bayes_analyzer.ld_lvl_sample_inf(woehler_curve, n_N_inf)\n",
     "\n",
     "    data_total_x = np.concatenate((data_small_fin['x'], data_small_inf['x']))\n",
     "    data_total_y = np.concatenate((data_small_fin['y'], data_small_inf['y']))\n",
@@ -105,13 +151,11 @@
     "\n",
     "    dataset = pd.DataFrame(data_total)\n",
     "    dataset.columns=['loads', 'cycles']\n",
-    "\n",
-    "    WC_data_sub = WoehlerCurve(dataset, ld_cyc_lim, {}, \n",
-    "                               {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''},\n",
-    "                               )\n",
-    "    WC_data_sub.calc_woehler_curve_parameters()\n",
-    "    x_sub = np.log10(WC_data_sub.fractures.loads)\n",
-    "    y_sub = np.log10(WC_data_sub.fractures.cycles)\n",
+    "    fatigue_data_sub = FatigueData(dataset, ld_cyc_lim)\n",
+    "    woehler_curve_creator_sub = WoehlerCurveCreator(fatigue_data_sub)\n",
+    "    woehler_curve_sub = woehler_curve_creator_sub.maximum_like_procedure({})\n",
+    "    x_sub = np.log10(fatigue_data_sub.fractures.loads)\n",
+    "    y_sub = np.log10(fatigue_data_sub.fractures.cycles)\n",
     "    data_small_frac = dict(x=x_sub, y=y_sub)\n",
     "\n",
     "    slope_sub, intercept_sub, r_value, p_value, std_err = stats.linregress(x_sub, y_sub)\n",
@@ -127,9 +171,9 @@
     "#### TN\n",
     "    with pm.Model() as WL:\n",
     "        stdev = pm.HalfNormal('stdev', sd=1.3) #sd standard wert (log-normal/ beat Verteilung/exp lambda)\n",
-    "        mu = pm.Normal('mu', mu=np.log10(WC_data_sub.N_shift).mean(), sd=np.log10(WC_data_sub.N_shift).std()) #mu könnte von FKM gegeben\n",
+    "        mu = pm.Normal('mu', mu=np.log10(fatigue_data_sub.N_shift).mean(), sd=np.log10(fatigue_data_sub.N_shift).std()) #mu könnte von FKM gegeben\n",
     "\n",
-    "        y = pm.Normal('y', mu=mu, sd=stdev, observed=np.log10(WC_data_sub.N_shift)) #lognormal\n",
+    "        y = pm.Normal('y', mu=mu, sd=stdev, observed=np.log10(fatigue_data_sub.N_shift)) #lognormal\n",
     "\n",
     "        trace_TN = pm.sample(ndraws, nuts_kwargs={'target_accept': 0.99}, chains=3, tune=1000)\n",
     "        \n",
@@ -141,7 +185,7 @@
     "    data_N = data_small_inf['y']\n",
     "\n",
     "    # create our Op\n",
-    "    logl = LogLike(mali_sum_lolli, data_S, data_N, WC_data.load_cycle_limit)\n",
+    "    logl = LogLike(mali_sum_lolli, data_S, data_N, fatigue_data_sub.load_cycle_limit)\n",
     "\n",
     "    # use PyMC3 to sampler from log-likelihood\n",
     "    with pm.Model():\n",
@@ -168,13 +212,13 @@
     "    if step==1:\n",
     "        with open('bayes_dict_5.json', 'w') as fp:\n",
     "            json.dump({'Bayes_TS':[trace_quantiles(trace_SD_TS)[0]['TS_50'][50]/2.5631031311],\n",
-    "                       'Mali_TS':[WC_data_sub.Mali_5p_result['1/TS']],\n",
+    "                       'Mali_TS':[woehler_curve.curve_parameters['1/TS']],\n",
     "                       'Bayes_SD':[trace_quantiles(trace_SD_TS)[0]['SD_50'][50]],\n",
-    "                       'Mali_SD':[np.log10(WC_data_sub.Mali_5p_result['SD_50'])],\n",
+    "                       'Mali_SD':[np.log10(woehler_curve.curve_parameters['SD_50'])],\n",
     "                       'Bayes_TN':[trace_quantiles(burned_trace_TN)[0]['stdev'][50]],\n",
-    "                       'Mali_TN':[WC_data_sub.Mali_5p_result['1/TN']],\n",
+    "                       'Mali_TN':[woehler_curve.curve_parameters['1/TN']],\n",
     "                       'Bayes_k':-[trace_quantiles(burned_trace_robust)[0]['x'][50]],\n",
-    "                       'Mali_k':[WC_data_sub.Mali_5p_result['k_1']]},fp)\n",
+    "                       'Mali_k':[woehler_curve.curve_parameters['k_1']]},fp)\n",
     "    else:\n",
     "        with open('bayes_dict_5.json', 'r') as fp:\n",
     "            dict_import = json.load(fp)\n",
@@ -183,10 +227,10 @@
     "            dict_import['Bayes_SD'].append(trace_quantiles(trace_SD_TS)[0]['SD_50'][50])\n",
     "            dict_import['Bayes_TN'].append(trace_quantiles(burned_trace_TN)[0]['mu'][50])\n",
     "            dict_import['Bayes_k'].append(trace_quantiles(burned_trace_robust)[0]['x'][50])\n",
-    "            dict_import['Mali_TS'].append(WC_data_sub.Mali_5p_result['1/TS'])\n",
-    "            dict_import['Mali_SD'].append(np.log10(WC_data_sub.Mali_5p_result['SD_50']))\n",
-    "            dict_import['Mali_TN'].append(WC_data_sub.Mali_5p_result['1/TN'])\n",
-    "            dict_import['Mali_k'].append(WC_data_sub.Mali_5p_result['k_1'])\n",
+    "            dict_import['Mali_TS'].append(woehler_curve_sub.curve_parameters['1/TS'])\n",
+    "            dict_import['Mali_SD'].append(np.log10(woehler_curve_sub.curve_parameters['SD_50']))\n",
+    "            dict_import['Mali_TN'].append(woehler_curve_sub.curve_parameters['1/TN'])\n",
+    "            dict_import['Mali_k'].append(woehler_curve_sub.curve_parameters['k_1'])\n",
     "\n",
     "            json.dump(dict_import, feedsjson)"
    ]
@@ -230,7 +274,7 @@
     "ax.plot(np.arange(len(dict_import['Bayes_TS'])),np.array([*dict_import['Bayes_TS']])*2.5631031311,  'gx', label='Bayes_TS')\n",
     "ax.plot( np.arange(len(dict_import['Mali_TS'])),dict_import['Mali_TS'], 'rx', label='Mali_TS')\n",
     "ax.plot(np.arange(len(dict_import['Mali_TS'])),\n",
-    "        np.ones(len(dict_import['Mali_TS']))*WC_data.Mali_5p_result['1/TS'],'b', label='Full')\n",
+    "        np.ones(len(dict_import['Mali_TS']))*woehler_curve.curve_parameters['1/TS'],'b', label='Full')\n",
     "plt.legend(loc=0)"
    ]
   },
@@ -250,8 +294,8 @@
     "ax.plot(np.arange(len(dict_import['Bayes_SD'])), dict_import['Bayes_SD'],  'gx', label='Bayes_SD')\n",
     "ax.plot(np.arange(len(dict_import['Mali_SD'])),dict_import['Mali_SD'], 'rx', label='Mali_SD')\n",
     "ax.plot(np.arange(len(dict_import['Mali_SD'])),\n",
-    "        np.ones(len(dict_import['Mali_SD']))*np.log10(WC_data.Mali_5p_result['SD_50']),'b', label='Full')\n",
-    "plt.legend(loc=0);"
+    "        np.ones(len(dict_import['Mali_SD']))*np.log10(woehler_curve.curve_parameters['SD_50']),'b', label='Full')\n",
+    "plt.legend(loc=0)"
    ]
   },
   {
@@ -270,8 +314,8 @@
     "ax.plot( np.arange(len(dict_import['Mali_TN'])),\n",
     "        np.ones(len(dict_import['Mali_TN']))*np.mean(dict_import['Mali_TN']), 'r')\n",
     "ax.plot(np.arange(len(dict_import['Mali_TN'])),\n",
-    "        np.ones(len(dict_import['Mali_TN']))*WC_data.Mali_5p_result['1/TN'],'b', \n",
-    "        label='Full %f'%WC_data.Mali_5p_result['1/TN'])\n",
+    "        np.ones(len(dict_import['Mali_TN']))*woehler_curve.curve_parameters['1/TN'],'b', \n",
+    "        label='Full %f'%woehler_curve.curve_parameters['1/TN'])\n",
     "#ax.set_yscale('log')\n",
     "plt.legend(loc=0);"
    ]
@@ -293,7 +337,7 @@
     "ax.plot( np.arange(len(dict_import['Mali_k'])),\n",
     "        np.mean(dict_import['Mali_k'])*np.ones(len(dict_import['Bayes_k'])), 'r')\n",
     "ax.plot(np.arange(len(dict_import['Mali_k'])),\n",
-    "        np.ones(len(dict_import['Mali_k']))*WC_data.Mali_5p_result['k_1'],'b', label='Full')\n",
+    "        np.ones(len(dict_import['Mali_k']))*woehler_curve.curve_parameters['k_1'],'b', label='Full')\n",
     "plt.legend(loc=0);"
    ]
   },
@@ -303,13 +347,13 @@
    "source": [
     "    with open('bayes_dict.json', 'w') as fp:\n",
     "        json.dump({'Bayes_TS':[trace_quantiles(trace_SD_TS)[0]['TS_50'][50]/2.5631031311],\n",
-    "                   'Mali_TS':[WC_data_sub.Mali_5p_result['1/TS']],\n",
+    "                   'Mali_TS':[woehler_curve_sub.curve_parameters['1/TS']],\n",
     "                   'Bayes_SD':[trace_quantiles(trace_SD_TS)[0]['SD_50'][50]],\n",
-    "                   'Mali_SD':[np.log10(WC_data_sub.Mali_5p_result['SD_50'])],\n",
+    "                   'Mali_SD':[np.log10(woehler_curve_sub.curve_parameters['SD_50'])],\n",
     "                   'Bayes_TN':[trace_quantiles(burned_trace_TN)[0]['stdev'][50]],\n",
-    "                   'Mali_TN':[WC_data_sub.Mali_5p_result['1/TN']],\n",
+    "                   'Mali_TN':[woehler_curve_sub.curve_parameters['1/TN']],\n",
     "                   'Bayes_k':-[trace_quantiles(burned_trace_robust)[0]['x'][50]],\n",
-    "                   'Mali_k':[WC_data_sub.Mali_5p_result['k_1']]},fp)\n",
+    "                   'Mali_k':[woehler_curve_sub.curve_parameters['k_1']]},fp)\n",
     "                   \n",
     "    with open('bayes_dict_5.json', 'r') as fp:\n",
     "        dict_import = json.load(fp)\n",
@@ -318,10 +362,10 @@
     "        dict_import['Bayes_SD'].append(trace_quantiles(trace_SD_TS)[0]['SD_50'][50])\n",
     "        dict_import['Bayes_TN'].append(trace_quantiles(burned_trace_TN)[0]['stdev'][50])\n",
     "        dict_import['Bayes_k'].append(trace_quantiles(burned_trace_robust)[0]['x'][50])\n",
-    "        dict_import['Mali_TS'].append(WC_data_sub.Mali_5p_result['1/TS'])\n",
-    "        dict_import['Mali_SD'].append(np.log10(WC_data_sub.Mali_5p_result['SD_50']))\n",
-    "        dict_import['Mali_TN'].append(WC_data_sub.Mali_5p_result['1/TN'])\n",
-    "        dict_import['Mali_k'].append(WC_data_sub.Mali_5p_result['k_1'])\n",
+    "        dict_import['Mali_TS'].append(woehler_curve_sub.curve_parameters['1/TS'])\n",
+    "        dict_import['Mali_SD'].append(np.log10(woehler_curve_sub.curve_parameters['SD_50']))\n",
+    "        dict_import['Mali_TN'].append(woehler_curve_sub.curve_parameters['1/TN'])\n",
+    "        dict_import['Mali_k'].append(woehler_curve_sub.curve_parameters['k_1'])\n",
     "\n",
     "        json.dump(dict_import, feedsjson)"
    ]
