--- a/demos/bayes_tool.ipynb
+++ b/demos/bayes_tool.ipynb
@@ -58,9 +58,8 @@
     "\n",
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
-    "from pylife.materialdata.woehler.analyzer import *\n",
-    "from pylife.materialdata.woehler.diagram import *\n",
-    "from pylife.materialdata.woehler.woehler_curve_widgets import *"
+    "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
+    "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n"
    ]
   },
   {
@@ -129,7 +128,7 @@
     "theano.gof.compilelock.set_lock_status(False)\n",
     "import theano.tensor as tt\n",
     "\n",
-    "from pylife.materialdata.woehler.bayes_analyzer import *"
+    "from pylife.materialdata.woehler.utils.bayes_analyzer import *"
    ]
   },
   {
@@ -153,8 +152,9 @@
     "ld_cyc_lim = data['cycles'].max()\n",
     "\n",
     "# Class WoehlerCurve\n",
-    "Bayes_data = WoehlerCurve(data, ld_cyc_lim, {}, {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''}, \n",
-    "                          \"failures\")"
+    "fatigue_data = FatigueData(data, ld_cyc_lim)\n",
+    "woehler_curve_creator = WoehlerCurveCreator(fatigue_data)\n",
+    "Bayes_data = woehler_curve_creator.maximum_like_procedure({})\n"
    ]
   },
   {
@@ -163,14 +163,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.log10(Bayes_data.fractures.loads)\n",
-    "y = np.log10(Bayes_data.fractures.cycles)\n",
+    "x = np.log10(fatigue_data.fractures.loads)\n",
+    "y = np.log10(fatigue_data.fractures.cycles)\n",
     "\n",
     "fig = plt.figure(figsize=(4,5.5))\n",
     "ax = fig.add_subplot(111, xlabel='x', ylabel='y', title='Generated data and underlying model')\n",
-    "ax.plot(y, x, 'x', label='%d Failures'%(len(Bayes_data.fractures.loads)))\n",
-    "plt.plot(np.log10(Bayes_data.runouts.cycles), np.log10(Bayes_data.runouts.loads), 'bo', mfc='none', \n",
-    "         label=u'%d Runouts'%(len(Bayes_data.runouts.loads)),alpha=0.5)\n",
+    "ax.plot(y, x, 'x', label='%d Failures'%(len(fatigue_data.fractures.loads)))\n",
+    "plt.plot(np.log10(fatigue_data.runouts.cycles), np.log10(fatigue_data.runouts.loads), 'bo', mfc='none', \n",
+    "         label=u'%d Runouts'%(len(fatigue_data.runouts.loads)),alpha=0.5)\n",
     "plt.xlabel(\"Load-cycle (N)\", fontsize=11)\n",
     "plt.ylabel(\"Load (S)\", fontsize=11)\n",
     "plt.legend(loc=0);\n",
@@ -210,9 +210,9 @@
     "dataset = pd.DataFrame(data_total)\n",
     "dataset.columns=['loads', 'cycles']\n",
     "\n",
-    "Bayes_data_sub = WoehlerCurve(dataset, ld_cyc_lim, {}, \n",
-    "                              {'k_1': '', '1/TN': '', 'SD_50': '', '1/TS': '', 'ND_50': ''},\n",
-    "                              \"failures\")"
+    "fatigue_data_sub = FatigueData(dataset)\n",
+    "woehler_curve_creator_sub = WoehlerCurveCreator(fatigue_data_sub)\n",
+    "Bayes_data_sub = woehler_curve_creator_sub.maximum_like_procedure({})\n"
    ]
   },
   {
@@ -228,15 +228,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_sub = np.log10(Bayes_data_sub.fractures.loads)\n",
-    "y_sub = np.log10(Bayes_data_sub.fractures.cycles)\n",
+    "x_sub = np.log10(fatigue_data_sub.fractures.loads)\n",
+    "y_sub = np.log10(fatigue_data_sub.fractures.cycles)\n",
     "data_sub = dict(x=x_sub, y=y_sub)\n",
     "\n",
     "fig = plt.figure(figsize=(4, 5.5))\n",
     "ax = fig.add_subplot(111, xlabel='x', ylabel='y', title='Generated data and underlying model')\n",
-    "ax.plot(y_sub, x_sub, 'x', label='%d Failures'%(len(Bayes_data_sub.fractures.loads)))\n",
-    "plt.plot(np.log10(Bayes_data_sub.runouts.cycles), np.log10(Bayes_data_sub.runouts.loads), 'bo', mfc='none', \n",
-    "         label=u'%d Runouts'%(len(Bayes_data_sub.runouts.loads)), alpha=0.5)\n",
+    "ax.plot(y_sub, x_sub, 'x', label='%d Failures'%(len(fatigue_data_sub.fractures.loads)))\n",
+    "plt.plot(np.log10(fatigue_data_sub.runouts.cycles), np.log10(fatigue_data_sub.runouts.loads), 'bo', mfc='none', \n",
+    "         label=u'%d Runouts'%(len(fatigue_data_sub.runouts.loads)), alpha=0.5)\n",
     "plt.xlabel(\"Load-cycle (N)\", fontsize=11)\n",
     "plt.ylabel(\"Load (S)\", fontsize=11)\n",
     "plt.legend(loc=0)\n",
@@ -389,8 +389,8 @@
    "outputs": [],
    "source": [
     "bayesian_slope_plot(data_sub, burned_trace_slope, \n",
-    "                    Bayes_data_sub.a_wl , Bayes_data_sub.b_wl, \n",
-    "                    Bayes_data.a_wl, Bayes_data.b_wl)\n",
+    "                    fatigue_data_sub.a_wl , fatigue_data_sub.b_wl, \n",
+    "                    fatigue_data.a_wl, fatigue_data.b_wl)\n",
     "name = \"k1_samples_plot\"\n",
     "plt.savefig(destination_path+name+'.eps', format='eps', dpi=300)"
    ]
@@ -401,11 +401,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Full SYS %d data points:'%Bayes_data.fractures.shape[0])\n",
-    "print('Mali Value:         ', Bayes_data.Mali_5p_result['k_1'])\n",
-    "print('\\nSub SYS %d data points:'% Bayes_data_sub.fractures.shape[0])\n",
+    "print('Full SYS %d data points:'%fatigue_data.fractures.shape[0])\n",
+    "print('Mali Value:         ', Bayes_data.curve_parameters['k_1'])\n",
+    "print('\\nSub SYS %d data points:'% fatigue_data_sub.fractures.shape[0])\n",
     "print('Bayes MC estimation:', abs(trace_quantiles(burned_trace_slope)[0]['x'][50]))\n",
-    "print('Mali Value:         ', Bayes_data_sub.Mali_5p_result['k_1'])"
+    "print('Mali Value:         ', Bayes_data_sub.curve_parameters['k_1'])"
    ]
   },
   {
@@ -425,10 +425,10 @@
     "    \n",
     "    # Priors\n",
     "    stdev = pm.Exponential('stdev', lam=1/5)\n",
-    "    mu = pm.Normal('mu', mu=np.log10(Bayes_data_sub.N_shift).mean(), sd=10)\n",
+    "    mu = pm.Normal('mu', mu=np.log10(fatigue_data_sub.N_shift).mean(), sd=10)\n",
     "    \n",
     "    # Likelihood\n",
-    "    y = pm.Normal('y', mu=mu, sd=stdev, observed=np.log10(Bayes_data_sub.N_shift))\n",
+    "    y = pm.Normal('y', mu=mu, sd=stdev, observed=np.log10(fatigue_data_sub.N_shift))\n",
     "    \n",
     "    # Inference\n",
     "    trace_TN = pm.sample(7000, nuts_kwargs={'target_accept': 0.99}, chains=4, tune=1000)"
@@ -477,13 +477,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Full SYS %d data points:'%Bayes_data.fractures.shape[0])\n",
-    "print('Pearl chain:        ', Bayes_data.TN)\n",
-    "print('Mali Value:         ', Bayes_data.Mali_5p_result['1/TN'])\n",
-    "print('\\nSub SYS %d data points:'% Bayes_data_sub.fractures.shape[0])\n",
+    "print('Full SYS %d data points:'%fatigue_data.fractures.shape[0])\n",
+    "print('Pearl chain:        ', fatigue_data.TN)\n",
+    "print('Mali Value:         ', Bayes_data.curve_parameters['1/TN'])\n",
+    "print('\\nSub SYS %d data points:'% fatigue_data_sub.fractures.shape[0])\n",
     "print('Bayes MC estimation:', trace_quantiles(burned_trace_TN)[0]['mu'][50])\n",
-    "print('Mali Value:         ', Bayes_data_sub.Mali_5p_result['1/TN'])\n",
-    "print('Pearl chain:        ', Bayes_data_sub.TN)"
+    "print('Mali Value:         ', Bayes_data_sub.curve_parameters['1/TN'])\n",
+    "print('Pearl chain:        ', fatigue_data_sub.TN)"
    ]
   },
   {
@@ -503,7 +503,7 @@
     "data_N = data_small_inf['y']\n",
     "\n",
     "# create our Op\n",
-    "logl = LogLike(mali_sum_lolli, data_S, data_N, Bayes_data.load_cycle_limit)\n",
+    "logl = LogLike(mali_sum_lolli, data_S, data_N, fatigue_data.load_cycle_limit)\n",
     "\n",
     "# use PyMC3 to sampler from log-likelihood\n",
     "with pm.Model() as inf_zone:\n",
@@ -537,16 +537,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Full SYS data points:',Bayes_data.zone_inf.shape[0])\n",
+    "print('Full SYS data points:',fatigue_data.zone_inf.shape[0])\n",
     "print('Sub SYS data points:  ', len(data_small_inf['x']))\n",
     "\n",
-    "print('\\nMali FUll Sys TS:', Bayes_data.Mali_5p_result['1/TS']) \n",
+    "print('\\nMali FUll Sys TS:', Bayes_data.curve_parameters['1/TS']) \n",
     "print('Bayes SUB Sys TS:',(trace_quantiles(trace_SD_TS)[0]['TS_50'][50]/2.5631031311))\n",
-    "print('Mali SUB Sys TS: ', Bayes_data_sub.Mali_5p_result['1/TS']) \n",
+    "print('Mali SUB Sys TS: ', Bayes_data_sub.curve_parameters['1/TS']) \n",
     "\n",
-    "print('\\nMali FUll Sys SD:', np.log10(Bayes_data.Mali_5p_result['SD_50']))\n",
+    "print('\\nMali FUll Sys SD:', np.log10(Bayes_data.curve_parameters['SD_50']))\n",
     "print('Bayes SUB Sys SD:',trace_quantiles(trace_SD_TS)[0]['SD_50'][50])\n",
-    "print('Mali SUB Sys SD: ', np.log10(Bayes_data_sub.Mali_5p_result['SD_50']))"
+    "print('Mali SUB Sys SD: ', np.log10(Bayes_data_sub.curve_parameters['SD_50']))"
    ]
   },
   {
@@ -583,7 +583,7 @@
     "ax.plot(np.arange(len(dict_import['Bayes_TS'])),dict_import['Bayes_TS'],  'gx', label='Bayes_TS')\n",
     "ax.plot( np.arange(len(dict_import['Mali_TS'])),dict_import['Mali_TS'], 'rx', label='Mali_TS')\n",
     "ax.plot(np.arange(len(dict_import['Mali_TS'])),\n",
-    "        np.ones(len(dict_import['Mali_TS']))*Bayes_data.Mali_5p_result['1/TS'],'b', label='Full')\n",
+    "        np.ones(len(dict_import['Mali_TS']))*Bayes_data.curve_parameters['1/TS'],'b', label='Full')\n",
     "plt.legend(loc=0);"
    ]
   },
@@ -603,7 +603,7 @@
     "ax.plot(np.arange(len(dict_import['Bayes_SD'])), dict_import['Bayes_SD'],  'gx', label='Bayes_SD')\n",
     "ax.plot(np.arange(len(dict_import['Mali_SD'])),dict_import['Mali_SD'], 'rx', label='Mali_SD')\n",
     "ax.plot(np.arange(len(dict_import['Mali_SD'])),\n",
-    "        np.ones(len(dict_import['Mali_SD']))*np.log10(Bayes_data.Mali_5p_result['SD_50']),'b', label='Full')\n",
+    "        np.ones(len(dict_import['Mali_SD']))*np.log10(Bayes_data.curve_parameters['SD_50']),'b', label='Full')\n",
     "plt.legend(loc=0);"
    ]
   },
@@ -624,7 +624,7 @@
     "ax.plot( np.arange(len(dict_import['Mali_k'])),\n",
     "        np.mean(dict_import['Mali_k'])*np.ones(len(dict_import['Bayes_k'])), 'r')\n",
     "ax.plot(np.arange(len(dict_import['Mali_k'])),\n",
-    "        np.ones(len(dict_import['Mali_k']))*Bayes_data.Mali_5p_result['k_1'],'b', label='Full')\n",
+    "        np.ones(len(dict_import['Mali_k']))*Bayes_data.curve_parameters['k_1'],'b', label='Full')\n",
     "plt.legend(loc=0);"
    ]
   },
@@ -644,8 +644,8 @@
     "ax.plot( np.arange(len(dict_import['Mali_TN'])),\n",
     "        np.ones(len(dict_import['Mali_TN']))*np.mean(dict_import['Mali_TN']), 'r')\n",
     "ax.plot(np.arange(len(dict_import['Mali_TN'])),\n",
-    "        np.ones(len(dict_import['Mali_TN']))*Bayes_data.Mali_5p_result['1/TN'],'b', \n",
-    "        label='Full %f'%Bayes_data.Mali_5p_result['1/TN'])\n",
+    "        np.ones(len(dict_import['Mali_TN']))*Bayes_data.curve_parameters['1/TN'],'b', \n",
+    "        label='Full %f'%Bayes_data.curve_parameters['1/TN'])\n",
     "#ax.set_yscale('log')\n",
     "plt.legend(loc=0);"
    ]
