CREATE-3271: organized files into folders, added path to test init

--- a/demos/bayes_multi_simulation.ipynb
+++ b/demos/bayes_multi_simulation.ipynb
@@ -60,7 +60,7 @@
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
     "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
-    "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n",
+    "from pylife.materialdata.woehler.creators.woehler_curve_creator import WoehlerCurveCreator\n",
     "from pylife.materialdata.woehler.utils.bayes_analyzer import *\n",
     "from pylife.materialdata.woehler.loglike import *\n",
     "\n",
