--- a/demos/bayes_tool.ipynb
+++ b/demos/bayes_tool.ipynb
@@ -59,7 +59,7 @@
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
     "from pylife.materialdata.woehler.fatigue_data import FatigueData\n",
-    "from pylife.materialdata.woehler.woehler_curve_creator import WoehlerCurveCreator\n"
+    "from pylife.materialdata.woehler.creators.woehler_curve_creator import WoehlerCurveCreator\n"
    ]
   },
   {
