Properly integrate the Bayes Wöhler analyzer
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(fatigue_data.baysian_information_criterion())"
+    "fatigue_data.baysian_information_criterion()"
    ]
   },
   {
