Adopt Wöhler Curve Visualization classes to new API
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
-    "import pylife.materialdata.woehler.fatigue_data\n",
+    "import pylife.materialdata.woehler as woehler\n",
     "from pylife.materialdata.woehler.controls.data_file_display import DataFileDisplay\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_creator_options import  WoehlerCurveCreatorOptions\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
@@ -188,8 +188,10 @@
    },
    "outputs": [],
    "source": [
-    "ld_cyc_lim = data['cycles'].max()\n",
-    "#ld_cyc_lim = 10e6"
+    "ld_cyc_lim = None\n",
+    "data = woehler.determine_fractures(data, ld_cyc_lim)\n",
+    "data\n",
+    "fatigue_data = data.fatigue_data"
    ]
   },
   {
@@ -224,17 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fatigue_data = data.fatigue.basic_analysis(ld_cyc_lim)\n",
+    "\n",
     "woehler_curve_creator_options = WoehlerCurveCreatorOptions(fatigue_data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fatigue_data.baysian_information_criterion()"
    ]
   },
   {
@@ -256,7 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve_creator_options.woehler_curve)"
+    "woehler_curve = woehler_curve_creator_options.woehler_curve\n",
+    "analyzer = woehler_curve_creator_options.analyzer()\n",
+    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve, fatigue_data, analyzer)"
    ]
   },
   {
