Adapt Wöhler probability estimations to new ProbabilityFit

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -58,11 +58,11 @@
     "sys.path.insert(0, os.path.abspath('..'))\n",
     "\n",
     "import pylife.materialdata.woehler as woehler\n",
+    "import pylife.utils.diagrams.probability_data as probdiagram\n",
     "from pylife.materialdata.woehler.controls.data_file_display import DataFileDisplay\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_creator_options import  WoehlerCurveCreatorOptions\n",
     "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
-    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n",
-    "from pylife.materialdata.woehler.controls.probability_curve_plotter import ProbabilityCurvePlotter"
+    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n"
    ]
   },
   {
@@ -272,7 +272,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "probability_curve_plotter = ProbabilityCurvePlotter(fatigue_data)"
+    "probdiag_finite = probdiagram.ProbabilityDataDiagram(analyzer.pearl_chain_estimator(),\n",
+    "                                                    occurrences_name='Load',\n",
+    "                                                    title='Failure probability finite')\n",
+    "probdiag_finite.plot()\n",
+    "if isinstance(analyzer, woehler.creators.probit.Probit):\n",
+    "    probdiag_infinite = probdiagram.ProbabilityDataDiagram(analyzer.pearl_chain_estimator(),\n",
+    "                                                        occurrences_name='Load',\n",
+    "                                                        title='Failure probability inffinite')\n",
+    "    probdiag_infinite.plot()\n"
    ]
   },
   {
@@ -295,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whole_woeler_curve_plotter = WholeWoehlerCurvePlotter(woehler_curve_creator_options.woehler_curve)"
+    "whole_woeler_curve_plotter = WoehlerCurveDiagrams(woehler_curve, fatigue_data, analyzer)"
    ]
   }
  ],
