Move mesh modules from utils to new mesh subpackage
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -24,8 +24,8 @@
     "import scipy.stats as stats\n",
     "import pylife.stress.equistress\n",
     "import pylife.strength.meanstress\n",
-    "import pylife.utils.meshplot\n",
-    "import pylife.utils.hotspot\n",
+    "import pylife.mesh.meshplot\n",
+    "import pylife.mesh.hotspot\n",
     "import matplotlib.pyplot as plt\n"
    ]
   },
@@ -74,7 +74,7 @@
    "source": [
     "hotSpotFrac = .5 # factor of the maximum local value\n",
     "# maxStressLimit = 250# Absolut stress value to avoid calculation based on numerical stress speaks\n",
-    "fe_res = fe_res.hotspot.calc(\"vM\",hotSpotFrac)\n",
+    "fe_res['hotspot'] = fe_res.hotspot.calc(\"vM\",hotSpotFrac)\n",
     "#fe_res = pd.concat([fe_res,hs],axis = 1)\n",
     "#display(fe_res)\n",
     "display(fe_res)"
@@ -86,16 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(fe_res['hotSpot'].max())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(fe_res)"
+    "display(fe_res['hotspot'].max())"
    ]
   },
   {
@@ -105,7 +96,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "fe_res.meshplot.plot(ax, 'hotSpot', cmap='jet_r')\n",
+    "fe_res.meshplot.plot(ax, 'hotspot', cmap='jet_r')\n",
     "plt.show()"
    ]
   }
