--- a/demos/strength_analysis.ipynb
+++ b/demos/strength_analysis.ipynb
@@ -36,7 +36,7 @@
     "import pylife.strength.infinite\n",
     "import pylife.materialdata.woehler\n",
     "\n",
-    "import pylife.utils.meshplot\n",
+    "import pylife.mesh.meshplot\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib\n"
