--- a/demos/stress_gradient.ipynb
+++ b/demos/stress_gradient.ipynb
@@ -25,8 +25,8 @@
     "import pandas as pd\n",
     "\n",
     "import pylife.stress.equistress\n",
-    "import pylife.stress.gradient\n",
-    "import pylife.utils.meshplot\n"
+    "import pylife.mesh.gradient\n",
+    "import pylife.mesh.meshplot\n"
    ]
   },
   {
@@ -107,19 +107,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/home/jmu3si/Devel/pylife/_venv/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "name": "stress_gradient.ipynb"
  },
